--- a/assets/_sass/partials/_footer.scss
+++ b/assets/_sass/partials/_footer.scss
@@ -1,4 +1,9 @@
 footer {
+    height: 300px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
     background: url('/assets/img/footer-bg1.jpg') no-repeat;
     background-size: cover;
     background-position: center top;
