--- a/assets/_sass/partials/_hero.scss
+++ b/assets/_sass/partials/_hero.scss
@@ -6,6 +6,7 @@ a Site hero
     background: linear-gradient(45deg, rgba(158,12,128,0.7), rgba(94,212,192,0.7)), url(https://images.unsplash.com/photo-1437419764061-2473afe69fc2?dpr=2&fit=crop&fm=jpg&h=750&ixjsv=2.0.0&ixlib=rb-0.3.5&q=50&w=1225);
     position: relative;
     .hero-slogan {
+        min-width: 300px;
         position: absolute;
         top: 50%;
         left: 50%;
